<resources>
    <string name="app_name">WikiLegis</string>
    <string name="title_activity_login">Wikilegis</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register_user">Wikilegis</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_exit_account">Exit Account</string>
    <string name="action_logout">Sair</string>
    <string name="action_login">Entrar</string>
    <string name="action_config">Configurações de download</string>
    <string name="action_report">Relatar Erro</string>
    <string name="sucessfull_registration_message">Cadastro efetuado com sucesso!</string>
    <string name="about_app">O Wikilegis é uma iniciativa da câmara dos deputados, que visa
        aproximar a sociedade e seus representantes políticos através de interação digital.
        Neste ambiente você tem acesso a projetos de leis que estão sendo elaborados e tem
        a possibilidade de contribuir com eles, avaliando, sugerindo alterações e comentando
        sua opinião.</string>


    <!-- all SharedPreferences keys-->
    <string name="token">token</string>
    <string name="id">id</string>
    <string name="is_logged_in">IsLoggedIn</string>
    <string name="first_name">firstName</string>
    <string name="last_name">lastName</string>
    <string name="email">email</string>
    <string name="network_settings">NetworkSettings</string>
    <string name="last_downloaded_date">date</string>
    <string name="share_url">shareUrl</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Proposal suggestion strings -->
    <string name="connection_problem">Desculpe, um problema ocorreu</string>
    <string name="empty_segment">Por favor, digite uma sugestão</string>
    <string name="success_proposal">Obrigado pela sugestão!</string>

    <!-- Proposal comment strings -->
    <string name="empty_comment">Por favor, digite um comentário</string>
    <string name="success_comment">Obrigado pelo comentário!</string>
    <string name="action_notify">Ativar Notificação</string>

    <!-- Sharing Edemocracia Links -->
    <string name="edemocracia_domain">http://wikilegis-staging.labhackercd.net</string>
    <string name="edemocracia_bill">/bill/</string>
    <string name="edemocracia_segment">/segments/</string>
</resources>
